--- a/mdimechanic.yml
+++ b/mdimechanic.yml
@@ -151,3 +151,30 @@ test_drivers:
       #- echo "==================== ENGINE OUTPUT ===================="
       #- cat TEST.log
       #- echo "======================================================="
+
+run_scripts:
+
+  test:
+    containers:
+      container1:
+        image: 'mdi/gcmc'
+        script:
+          - echo "Insert code that will confirm that your code has been built successfully"
+          - export USER=MDIMECHANIC
+          - |
+            if [ -d "tests/scratch" ] ; then
+              rm -r tests/scratch
+            fi
+          - mkdir -p tests/scratch
+          - mkdir -p tests/scratch/userscr
+
+          # These files are created to ensure that the rungms script doesn't return a non-zero exit code
+          - cd tests/scratch
+          - touch TEST-mdi.cube
+          - touch TEST-mdi.grd
+          - touch TEST-mdi.csv
+          - cd ../../
+
+          - cd tests/validate_engine
+          - mpiexec -n 1 csh -e ../../build/gamess/rungms TEST.inp 00 2 2 > TEST.log 2> TEST.err
+
