--- a/mdimechanic.yml
+++ b/mdimechanic.yml
@@ -47,15 +47,8 @@ docker:
     - python bin/create-install-info.py --fortran_version ${GCC_MAJOR_VERSION}.${GCC_MINOR_VERSION} --mdi --mpich --mpi --mpi_path /usr/lib/x86_64-linux-gnu/mpich
 
     # Generate the Makefile
-    - export builddir=$(pwd)
-#    - echo "GMS_PATH = ${builddir}" >> Makefile
-#    - echo "GMS_VERSION = 00" >> Makefile
-#    - echo "GMS_BUILD_PATH = ${builddir}" >> Makefile
-#    - echo "GMS_FC = gfortran" >> Makefile
-#    - echo "GMS_CC = gcc" >> Makefile
-#    - echo "GMS_MDI = true" >> Makefile
-    - export GMS_MDI=true
-#    - echo 'include $(GMS_PATH)/Makefile.in' >> Makefile
+#    - export builddir=$(pwd)
+#    - export GMS_MDI=true
 
     # Build LAPACK
     - ./tools/lapack/download-lapack.csh
@@ -382,7 +375,7 @@ run_scripts:
           - cd /repo/tests/gamess_lammps
 
           # Launch GAMESS
-          - mpiexec -n 1 csh -e ../../build/gamess/rungms TEST.inp 00 2 2 -mdi "-method TCP -role ENGINE -name QM -hostname localhost -port 8021" > TEST.log 2> TEST.err &
+          - mpiexec -n 1 tcsh -e ../../build/gamess/rungms TEST.inp 00 1 1 1 -mdi "-method TCP -role ENGINE -name QM -hostname localhost -port 8021" > TEST.log 2> TEST.err &
 
           # Launch LAMMPS
           - ../../build/lammps/build/lmp_mdi -mdi "-method TCP -role DRIVER -name driver -port 8021" -in lammps.in > lammps.out
@@ -415,5 +408,5 @@ run_scripts:
           - cd ../../
 
           - cd tests/validate_engine
-          - mpiexec -n 1 csh -e ../../build/gamess/rungms TEST.inp 00 2 2 > TEST.log 2> TEST.err
+          - mpiexec -n 1 tcsh -e ../../build/gamess/rungms TEST.inp 00 1 1 1 > TEST.log 2> TEST.err
 
