--- a/mdimechanic.yml
+++ b/mdimechanic.yml
@@ -46,10 +46,6 @@ docker:
     - export NUM_CPU_CORES=`grep -c ^processor /proc/cpuinfo`
     - python bin/create-install-info.py --fortran_version ${GCC_MAJOR_VERSION}.${GCC_MINOR_VERSION} --mdi --mpich --mpi --mpi_path /usr/lib/x86_64-linux-gnu/mpich
 
-    # Generate the Makefile
-#    - export builddir=$(pwd)
-#    - export GMS_MDI=true
-
     # Build LAPACK
     - ./tools/lapack/download-lapack.csh
     - make -j $NUM_CPU_CORES lapack
@@ -74,25 +70,25 @@ docker:
     - sed -i 's/set DDI_MPI_CHOICE=impi/set DDI_MPI_CHOICE=mpich/g' /repo/build/gamess/rungms
 
     # Obtain a clone of LAMMPS
-#    - |
-#      if [ ! -d "/repo/build/lammps" ]; then
-#        git clone https://github.com/lammps/lammps.git /repo/build/lammps
-#      fi
-#    - LAMMPS_INSTALL='mpi'
+    - |
+      if [ ! -d "/repo/build/lammps" ]; then
+        git clone https://github.com/lammps/lammps.git /repo/build/lammps
+      fi
+    - LAMMPS_INSTALL='mpi'
 
     # Configure LAMMPS
-#    - |
-#      if [ ! -d "/repo/build/lammps/build" ]; then
-#        mkdir -p /repo/build/lammps/build
-#        cd /repo/build/lammps/build
-#        cmake -D PKG_RIGID=yes -D PKG_MOLECULE=yes -D PKG_KSPACE=yes -D PKG_MDI=yes -D BUILD_SHARED_LIBS=yes -D LAMMPS_MACHINE=mpi -DCMAKE_BUILD_TYPE=Debug ../cmake
-#      fi
+    - |
+      if [ ! -d "/repo/build/lammps/build" ]; then
+        mkdir -p /repo/build/lammps/build
+        cd /repo/build/lammps/build
+        cmake -D PKG_RIGID=yes -D PKG_MOLECULE=yes -D PKG_KSPACE=yes -D PKG_MDI=yes -D BUILD_SHARED_LIBS=yes -D LAMMPS_MACHINE=mpi -DCMAKE_BUILD_TYPE=Debug ../cmake
+      fi
 
     # Compile LAMMPS
-#    - cd /repo/build/lammps/build
-#    - make -j 4
-#    - cp lmp_mpi lmp_mdi
-#    - cp liblammps_mpi.so liblammps.so
+    - cd /repo/build/lammps/build
+    - make -j 4
+    - cp lmp_mpi lmp_mdi
+    - cp liblammps_mpi.so liblammps.so
 
   validate_engine:
     - echo "Starting GAMESS validate_engine script"
@@ -216,7 +212,7 @@ engine_tests:
     - export GMSPATH=/repo/build/gamess
 
     - cd tests/validate_engine
-    - mpiexec -n 1 tcsh -e ../../build/gamess/rungms -mdi "${MDI_OPTIONS}" TEST.inp 00 1 1 1 > TEST.log 2> TEST.err
+    - mpiexec -n 1 tcsh -e ../../build/gamess/rungms --mdi "${MDI_OPTIONS}" TEST.inp 00 1 1 1 > TEST.log 2> TEST.err
     #- export GAMESS_MDI_OPTIONS="${MDI_OPTIONS}"
     #- mpiexec -n 1 tcsh -e ../../build/gamess/rungms TEST.inp 00 1 1 1 > TEST.log 2> TEST.err
 
@@ -375,10 +371,10 @@ run_scripts:
           - cd /repo/tests/gamess_lammps
 
           # Launch GAMESS
-          - mpiexec -n 1 tcsh -e ../../build/gamess/rungms TEST.inp 00 1 1 1 -mdi "-method TCP -role ENGINE -name QM -hostname localhost -port 8021" > TEST.log 2> TEST.err &
+          - mpiexec -n 1 tcsh -e ../../build/gamess/rungms TEST.inp 00 1 1 1 --mdi "-method TCP -role ENGINE -name QM -hostname localhost -port 8021" > TEST.log 2> TEST.err &
 
           # Launch LAMMPS
-          - ../../build/lammps/build/lmp_mdi -mdi "-method TCP -role DRIVER -name driver -port 8021" -in lammps.in > lammps.out
+          - ../../build/lammps/build/lmp_mdi --mdi "-method TCP -role DRIVER -name driver -port 8021" -in lammps.in > lammps.out
           - echo "Test output:"
           - cat lammps.out
 
